--- a/public/Restaurantly/index.html
+++ b/public/Restaurantly/index.html
@@ -5,8 +5,8 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Restaurantly Bootstrap Template - Index</title>
-  <meta content="" name="description">
+  <title>Husna Kitchen - Kambing Bakar Pilah #sekalighasonaklaie</title>
+  <meta content="Kambing Bakar Pilah" name="description">
   <meta content="" name="keywords">
 
   <!-- Favicons -->
@@ -60,7 +60,7 @@
   <header id="header" class="fixed-top d-flex align-items-cente">
     <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">Restaurantly</a></h1>
+      <h1 class="logo me-auto me-lg-0"><a href="index.html">Husna Kitchen</a></h1>
       <!-- Uncomment below if you prefer to use an image logo -->
       <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="Restaurantly/assets/img/logo.png" alt="" class="img-fluid"></a>-->
 
@@ -104,8 +104,8 @@
     <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col-lg-8">
-          <h1>Welcome to <span>Restaurantly</span></h1>
-          <h2>Delivering great food for more than 20 years!</h2>
+          <h1>Welcome to <span>Husna Kitchen</span></h1>
+          <h2>The best kambing bakar ! #sekalighasonaklaie</h2>
 
           <div class="btns">
             <a href="#menu" class="btn-menu animated fadeInUp scrollto">Our Menu</a>
@@ -219,7 +219,7 @@
           <div class="col-lg-6 menu-item filter-starters">
             <img src="Restaurantly/assets/img/menu/lobster-bisque.jpg" class="menu-img" alt="">
             <div class="menu-content">
-              <a href="#">Lobster Bisque</a><span>$5.95</span>
+              <a href="/menu/1">Kambing Bakar</a><span>$5.95</span>
             </div>
             <div class="menu-ingredients">
               Lorem, deren, trataro, filede, nerada
@@ -890,7 +890,7 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Restaurantly</h3>
+              <h3>Husna Kitchen</h3>
               <p>
                 A108 Adam Street <br>
                 NY 535022, USA<br><br>
@@ -944,7 +944,7 @@
 
     <div class="container">
       <div class="copyright">
-        &copy; Copyright <strong><span>Restaurantly</span></strong>. All Rights Reserved
+        &copy; Copyright <strong><span>FFF</span></strong>. All Rights Reserved
       </div>
       <div class="credits">
         <!-- All the links in the footer should remain intact. -->
