masuk & setting logo HK

--- a/public/Restaurantly/index.html
+++ b/public/Restaurantly/index.html
@@ -57,12 +57,12 @@
   </div>
 
   <!-- ======= Header ======= -->
-  <header id="header" class="fixed-top d-flex align-items-cente">
-    <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between">
+  <header id="header" class="fixed-top d-flex align-items-cente" style="margin-top:15px;">
+    <div class="container-fluid container-xl d-flex align-items-center justify-content-lg-between" style="max-height: 35px;" >
 
-      <h1 class="logo me-auto me-lg-0"><a href="index.html">Husna Kitchen</a></h1>
+      <!-- <h1 class="logo me-auto me-lg-0"><a href="index.html">Husna Kitchen</a></h1> -->
       <!-- Uncomment below if you prefer to use an image logo -->
-      <!-- <a href="index.html" class="logo me-auto me-lg-0"><img src="Restaurantly/assets/img/logo.png" alt="" class="img-fluid"></a>-->
+      <a href="index.html" class="logo me-auto me-lg-0" ><img src="Restaurantly/assets/img/logo.png" alt="" class="img-fluid masuk-logo" ></a>
 
       <nav id="navbar" class="navbar order-last order-lg-0">
         <ul>
