--- a/public/Restaurantly/index.html
+++ b/public/Restaurantly/index.html
@@ -43,8 +43,8 @@
     <div class="container d-flex justify-content-center justify-content-md-between">
 
       <div class="contact-info d-flex align-items-center">
-        <i class="bi bi-phone d-flex align-items-center"><span>+1 5589 55488 55</span></i>
-        <i class="bi bi-clock d-flex align-items-center ms-4"><span> Mon-Sat: 2AM - 23PM</span></i>
+        <i class="bi bi-phone d-flex align-items-center"><span>+6013-607 2728</span></i>
+        <i class="bi bi-clock d-flex align-items-center ms-4"><span> Mon-Sat: 12PM - 23PM</span></i>
       </div>
 
       <div class="languages d-none d-md-flex align-items-center">
@@ -808,8 +808,10 @@
       </div>
 
       <div data-aos="fade-up">
-        <iframe style="border:0; width: 100%; height: 350px;" src="https://www.google.com/maps/embed?pb=!1m14!1m8!1m3!1d12097.433213460943!2d-74.0062269!3d40.7101282!3m2!1i1024!2i768!4f13.1!3m3!1m2!1s0x0%3A0xb89d1fe6bc499443!2sDowntown+Conference+Center!5e0!3m2!1smk!2sbg!4v1539943755621" frameborder="0" allowfullscreen></iframe>
+        <iframe style="border:0; width: 100%; height: 350px;" src="https://maps.google.com/maps?q=42-g,%20Pusat%20Komersial%20Melang,%2072000%20Kuala%20Pilah,%20Negeri%20Sembilan&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" allowfullscreen></iframe>
       </div>
+
+      
 
       <div class="container" data-aos="fade-up">
 
@@ -820,7 +822,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>A108 Adam Street, New York, NY 535022</p>
+                <p>No.42-G, Jalan 5, Pusat Komersial Melang,72000 Kuala Pilah, Negeri Sembilan</p>
               </div>
 
               <div class="open-hours">
@@ -828,20 +830,20 @@
                 <h4>Open Hours:</h4>
                 <p>
                   Monday-Saturday:<br>
-                  11:00 AM - 2300 PM
+                  12:00 PM - 23:00 PM
                 </p>
               </div>
 
               <div class="email">
                 <i class="bi bi-envelope"></i>
                 <h4>Email:</h4>
-                <p>info@example.com</p>
+                <p>kambingperapilah@gmail.com</p>
               </div>
 
               <div class="phone">
                 <i class="bi bi-phone"></i>
-                <h4>Call:</h4>
-                <p>+1 5589 55488 55s</p>
+                <h4>WhatsApp/Call:</h4>
+                <p>+6013-607 2728</p>
               </div>
 
             </div>
@@ -890,19 +892,20 @@
 
           <div class="col-lg-3 col-md-6">
             <div class="footer-info">
-              <h3>Husna Kitchen</h3>
+              <!-- <h3>Husna Kitchen</h3> -->
+              <img src="Restaurantly/assets/img/logo.png" alt="" class="img-fluid" style="margin-left: -20px;" >
               <p>
-                A108 Adam Street <br>
-                NY 535022, USA<br><br>
-                <strong>Phone:</strong> +1 5589 55488 55<br>
-                <strong>Email:</strong> info@example.com<br>
+                No.42-G, Jalan 5, Pusat Komersial Melang,<br>
+                72000 Kuala Pilah, Negeri Sembilan<br><br>
+                <strong>Phone:</strong> +6013-607 2728<br>
+                <strong>Email:</strong> kambingperapilah@gmail.com<br>
               </p>
               <div class="social-links mt-3">
-                <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a>
-                <a href="#" class="facebook"><i class="bx bxl-facebook"></i></a>
-                <a href="#" class="instagram"><i class="bx bxl-instagram"></i></a>
-                <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a>
-                <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a>
+                <!-- <a href="#" class="twitter"><i class="bx bxl-twitter"></i></a> -->
+                <a href="https://www.facebook.com/KambingBakarPilah/" class="facebook"><i class="bx bxl-facebook"></i></a>
+                <a href="https://www.instagram.com/husnakitchenhq/" class="instagram"><i class="bx bxl-instagram"></i></a>
+                <!-- <a href="#" class="google-plus"><i class="bx bxl-skype"></i></a> -->
+                <!-- <a href="#" class="linkedin"><i class="bx bxl-linkedin"></i></a> -->
               </div>
             </div>
           </div>
