--- a/public/Restaurantly/index.html
+++ b/public/Restaurantly/index.html
@@ -104,7 +104,7 @@
     <div class="container position-relative text-center text-lg-start" data-aos="zoom-in" data-aos-delay="100">
       <div class="row">
         <div class="col-lg-8">
-          <h1>Welcome to <span>Husna Kitchen</span></h1>
+          <h1>Welcome to <span>Kambing Bakar Pilah</span></h1>
           <h2>The best kambing bakar ! #sekalighasonaklaie</h2>
 
           <div class="btns">
