--- a/public/Restaurantly/index.html
+++ b/public/Restaurantly/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>Husna Kitchen - Kambing Bakar Pilah #sekalighasonaklaie</title>
+  <title>xHusna Kitchen - Kambing Bakar Pilah #sekalighasonaklaie</title>
   <meta content="Kambing Bakar Pilah" name="description">
   <meta content="" name="keywords">
 
