--- a/public/Restaurantly/index.html
+++ b/public/Restaurantly/index.html
@@ -5,7 +5,7 @@
   <meta charset="utf-8">
   <meta content="width=device-width, initial-scale=1.0" name="viewport">
 
-  <title>xHusna Kitchen - Kambing Bakar Pilah #sekalighasonaklaie</title>
+  <title>Husna Kitchen - Kambing Bakar Pilah #sekalighasonaklaie</title>
   <meta content="Kambing Bakar Pilah" name="description">
   <meta content="" name="keywords">
 
@@ -133,20 +133,15 @@
             </div>
           </div>
           <div class="col-lg-6 pt-4 pt-lg-0 order-2 order-lg-1 content">
-            <h3>Voluptatem dignissimos provident quasi corporis voluptates sit assumenda.</h3>
-            <p class="fst-italic">
-              Lorem ipsum dolor sit amet, consectetur adipiscing elit, sed do eiusmod tempor incididunt ut labore et dolore
-              magna aliqua.
-            </p>
+            <h3>Nak tau tak apa beza kambing bakar kami dengan Kedai Western lain ?</h3>
+          
             <ul>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat.</li>
-              <li><i class="bi bi-check-circle"></i> Duis aute irure dolor in reprehenderit in voluptate velit.</li>
-              <li><i class="bi bi-check-circle"></i> Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate trideta storacalaperda mastiro dolore eu fugiat nulla pariatur.</li>
+              <li><i class="bi bi-check-circle"></i> Daging Kambing bahagian LAMB SHOULDER yang lembut </li>
+              <li><i class="bi bi-check-circle"></i> Perapan ISTIMEWA HOMEMADE yang betul betul PADUUU</li>
+              <li><i class="bi bi-check-circle"></i> Sos lada Hitam HOMEMADE yang tak kan dijumpai di tempat lain</li>
             </ul>
             <p>
-              Ullamco laboris nisi ut aliquip ex ea commodo consequat. Duis aute irure dolor in reprehenderit in voluptate
-              velit esse cillum dolore eu fugiat nulla pariatur. Excepteur sint occaecat cupidatat non proident, sunt in
-              culpa qui officia deserunt mollit anim id est laborum
+              Kambing kami di bakar menggunakan arang bagi menaikkan lagi aroma kambinng bakar, hampir kesemua menu kami di bakar menggunakan arang
             </p>
           </div>
         </div>
@@ -509,56 +504,7 @@
       </div>
     </section><!-- End Events Section -->
 
-    <!-- ======= Book A Table Section ======= -->
-    <section id="book-a-table" class="book-a-table">
-      <div class="container" data-aos="fade-up">
-
-        <div class="section-title">
-          <h2>Reservation</h2>
-          <p>Book a Table</p>
-        </div>
-
-        <form action="forms/book-a-table.php" method="post" role="form" class="php-email-form" data-aos="fade-up" data-aos-delay="100">
-          <div class="row">
-            <div class="col-lg-4 col-md-6 form-group">
-              <input type="text" name="name" class="form-control" id="name" placeholder="Your Name" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
-              <div class="validate"></div>
-            </div>
-            <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
-              <input type="email" class="form-control" name="email" id="email" placeholder="Your Email" data-rule="email" data-msg="Please enter a valid email">
-              <div class="validate"></div>
-            </div>
-            <div class="col-lg-4 col-md-6 form-group mt-3 mt-md-0">
-              <input type="text" class="form-control" name="phone" id="phone" placeholder="Your Phone" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
-              <div class="validate"></div>
-            </div>
-            <div class="col-lg-4 col-md-6 form-group mt-3">
-              <input type="text" name="date" class="form-control" id="date" placeholder="Date" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
-              <div class="validate"></div>
-            </div>
-            <div class="col-lg-4 col-md-6 form-group mt-3">
-              <input type="text" class="form-control" name="time" id="time" placeholder="Time" data-rule="minlen:4" data-msg="Please enter at least 4 chars">
-              <div class="validate"></div>
-            </div>
-            <div class="col-lg-4 col-md-6 form-group mt-3">
-              <input type="number" class="form-control" name="people" id="people" placeholder="# of people" data-rule="minlen:1" data-msg="Please enter at least 1 chars">
-              <div class="validate"></div>
-            </div>
-          </div>
-          <div class="form-group mt-3">
-            <textarea class="form-control" name="message" rows="5" placeholder="Message"></textarea>
-            <div class="validate"></div>
-          </div>
-          <div class="mb-3">
-            <div class="loading">Loading</div>
-            <div class="error-message"></div>
-            <div class="sent-message">Your booking request was sent. We will call back or send an Email to confirm your reservation. Thank you!</div>
-          </div>
-          <div class="text-center"><button type="submit">Book a Table</button></div>
-        </form>
-
-      </div>
-    </section><!-- End Book A Table Section -->
+   
 
     <!-- ======= Testimonials Section ======= -->
     <section id="testimonials" class="testimonials section-bg">
@@ -650,7 +596,7 @@
       <div class="container" data-aos="fade-up">
         <div class="section-title">
           <h2>Gallery</h2>
-          <p>Some photos from Our Restaurant</p>
+          <p>Beberapa foto dari Restoran Kami</p>
         </div>
       </div>
 
@@ -733,7 +679,7 @@
 
         <div class="section-title">
           <h2>Chefs</h2>
-          <p>Our Proffesional Chefs</p>
+          <p>Chef hebat kami!</p>
         </div>
 
         <div class="row">
@@ -803,16 +749,15 @@
 
         <div class="section-title">
           <h2>Contact</h2>
-          <p>Contact Us</p>
+          <p>Hubungi Kami</p>
         </div>
       </div>
 
       <div data-aos="fade-up">
-        <iframe style="border:0; width: 100%; height: 350px;" src="https://maps.google.com/maps?q=42-g,%20Pusat%20Komersial%20Melang,%2072000%20Kuala%20Pilah,%20Negeri%20Sembilan&t=&z=17&ie=UTF8&iwloc=&output=embed" frameborder="0" allowfullscreen></iframe>
+        <iframe style="border:0; width: 100%; height: 350px;" src="https://maps.google.com/maps?q=Kambing%20Bakar%20Pilah,%20Lorong%20Tbd%202/2,%20Kampung%20Batu%20Temensu,%20Kuala%20Pilah,%20Negeri%20Sembilan&t=&z=15&ie=UTF8&iwloc=&output=embed" frameborder="0" allowfullscreen></iframe>
       </div>
 
       
-
       <div class="container" data-aos="fade-up">
 
         <div class="row mt-5">
@@ -822,7 +767,7 @@
               <div class="address">
                 <i class="bi bi-geo-alt"></i>
                 <h4>Location:</h4>
-                <p>No.42-G, Jalan 5, Pusat Komersial Melang,72000 Kuala Pilah, Negeri Sembilan</p>
+                <p>No. 73, Lorong TBD 2/2, Taman Bahagia Delima, 72000 Kuala Pilah, Negeri Sembilan. </p>
               </div>
 
               <div class="open-hours">
@@ -830,7 +775,7 @@
                 <h4>Open Hours:</h4>
                 <p>
                   Monday-Saturday:<br>
-                  12:00 PM - 23:00 PM
+                  6:00 PM - 10 PM / 11 PM
                 </p>
               </div>
 
